WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35514
AX: changes to WAI-ARIA grid aren't perceived correctly by VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=35514
Summary
AX: changes to WAI-ARIA grid aren't perceived correctly by VoiceOver
chris fleizach
Reported
2010-02-28 23:22:12 PST
when a grid changes its DOM, and VoiceOver asks for an attribute like AXRows, the children are not updated
Attachments
patch
(11.91 KB, patch)
2010-03-01 00:03 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-03-01 00:03:01 PST
Created
attachment 49709
[details]
patch
Darin Adler
Comment 2
2010-03-01 14:11:32 PST
Comment on
attachment 49709
[details]
patch Seems to me that this idiom: if (needsToUpdateChildren()) clearChildren(); if (!hasChildren()) addChildren(); Should be in a helper function. It's not good to repeat it all those different places. Can we make the needsToUpdateChildren protected instead of public?
chris fleizach
Comment 3
2010-03-01 14:12:36 PST
(In reply to
comment #2
)
> (From update of
attachment 49709
[details]
) > Seems to me that this idiom: > > if (needsToUpdateChildren()) > clearChildren(); > > if (!hasChildren()) > addChildren(); > > Should be in a helper function. It's not good to repeat it all those different > places. >
Will do
> Can we make the needsToUpdateChildren protected instead of public?
Yes, this patch makes it protected instead of private
chris fleizach
Comment 4
2010-03-01 17:19:45 PST
http://trac.webkit.org/changeset/55390
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug