WebKitTools/DumpRenderTree/AccessibilityUIElement.h
@@ -143,6 +143,8 @@ public:
     int indexInTable();
     JSStringRef rowIndexRange();
     JSStringRef columnIndexRange();
+    int rowCount();
+    int columnCount();
     
     // Tree/Outline specific attributes
     AccessibilityUIElement selectedRowAtIndex(unsigned);
